2005-03-12 07:43  antirez

	* ChangeLog, jim.c: Modified Jim_Free() to be more strict, now it
	  panics if the refcount of the object is not exactly 0.  Now new
	  objects that are not used may be freed using Jim_Free instead to
	  use Jim_IncrRefCount() + Jim_DecrRefCount() calls.

2005-03-11 23:00  antirez

	* ChangeLog, jim.c: Converted some free() call to Jim_Free().
	  Actually Jim_Free is a macro that just expands to free for now,
	  but in the future Jim may include a specialized allocator for
	  better performances.

2005-03-11 10:37  antirez

	* ChangeLog, jim.c: [lambda] modified to be 'statics' capable.

2005-03-11 10:33  antirez

	* ChangeLog, Makefile: default Makefile optimization level set to
	  -O2 again.  I committed a Makefile with -Os for an error. (me)

2005-03-11 10:31  antirez

	* ChangeLog, jim.c, test.tcl: Fix about [rename] against procedures
	  with statics.  Added a regression test to test.tcl (I plan to
	  move everything inside regtest.tcl into test.tcl).

2005-03-11 10:25  antirez

	* ChangeLog, jim.c: more static fixes (me)

2005-03-11 09:43  antirez

	* jim.c: tons of static var fixes...

2005-03-11 08:21  antirez

	* ChangeLog, jim.c, jim.h: static variables support

2005-03-10 16:58  antirez

	* ChangeLog, jim.c, jim.h, test.tcl: lrange command (me)

2005-03-10 11:03  antirez

	* Makefile, README, bench.tcl, jim.c, tools/benchtable.tcl: Some
	  fix to bench.tcl to make it able to run in Tcl7.6.  README
	  update.

2005-03-09 14:42  patthoyts

	* Makefile.vc: Add profile option

2005-03-09 13:00  patthoyts

	* bench.tcl: Improved formatting for normal output

2005-03-09 12:57  patthoyts

	* tools/benchtable.tcl: New file to tabulate accumulated benchmark
	  data from bench.tcl -batch

2005-03-09 12:06  antirez

	* ChangeLog, jim.c, jim.h, test.tcl: [linsert] command added
	  (Clemens Hintze).  Jim_GetIndex() semantic changed to make
	  [lindex] more compatible with Tcl's one, without effects on other
	  commnads (me).
